fixed by giving .project-item a hidden overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -76,6 +76,9 @@ header{
 .projects .btn:hover{
     background: rgba(47, 48, 97, 80%);
 }
+.project-item{
+    overflow: hidden;
+}
 .project-item img{
 float: left;
 }
